# Elokuvalista

./: .gitignore  README.md  app.py  config.py  database_handler.py  db.py  feed.py  greet.py  schema.sql  users.py  validate.py
src/: app.py  feed.py  greet.py  pyproject.toml  schema.sql  stats.py  users.py  validate.py
src/static/: style.css
src/templates/: layout.html
src/templates/feed/: base.html  index.html
src/templates/form/: add_movie.html  delete_comment.html  edit_post.html
static/: style.css
templates/: add_movie.html  delete_post.html  edit_post.html  index.html  layout.html  login.html  post.html  register.html  search.html  sorted.html  user.html
templates/feed/: base.html  index.html  search.html  sorted.html
templates/form/: add_movie.html  base.html  delete_comment.html  delete_post.html  edit_comment.html  edit_post.html  login.html  register.html
templates/pages/: base.html  post.html  user.html
